# bachelorthesisApplication

./: .gitignore  CMakeLists.txt  Makefile  README.md  app  main.cpp  test.cpp
client/: client.cpp  client.h
server/: server.cpp  server.h
server/hashmap/: hashmap.cpp  hashmap.h
shared/: shared.h
